2013-02-28  Sam Weinig  <sam@webkit.org>

        Don't install unused XPCServices on Lion
        <rdar://problem/13264712>

        Rubber-stamped by Anders Carlsson

        * Configurations/BaseXPCService.xcconfig:

2013-02-28  David Kilzer  <ddkilzer@apple.com>

        BUILD FIX (r144221): SetSmartInsertDeleteEnabled should be wrapped in PLATFORM(MAC)

        * WebProcess/WebPage/WebPage.messages.in: Move
        SetSmartInsertDeleteEnabled from USE(APPKIT) to PLATFORM(MAC).

2013-02-27  Csaba Osztrogonác  <ossy@webkit.org>

        [WK2] One more unreviewed buildfix for EFL, GTK and Qt after r144218.

        * CMakeLists.txt:
        * GNUmakefile.list.am:
        * Target.pri:
        * WebProcess/Storage/StorageNamespaceProxy.cpp:
        (WebKit::StorageNamespaceProxy::copy):

2013-02-27  Zan Dobersek  <zdobersek@igalia.com>

        Unreviewed (speculative) build fixes for EFL, GTK and Qt after r144218.

        * CMakeLists.txt:
        * DerivedSources.pri:
        * GNUmakefile.list.am:
        * Target.pri:

2013-02-27  John Bauman  <jbauman@chromium.org>

        Plugin in iframe may not display
        https://bugs.webkit.org/show_bug.cgi?id=109879

        Reviewed by Simon Fraser.

        Update geometry when cliprect changes.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::clipRectChanged):
        * WebProcess/Plugins/PluginView.h:

2013-02-27  Jer Noble  <jer.noble@apple.com>

        REGRESSION (48533): Full-frame plugins stopped working (download instead of loading the plugin)
        https://bugs.webkit.org/show_bug.cgi?id=111003

        Reviewed by Anders Carlsson.

        Also query the Page's pluginData when determining whether a given MIME type can be shown.

        * WebProcess/InjectedBundle/API/c/WKBundlePage.cpp:
        (WKBundlePageCanShowMIMEType):
        * WebProcess/WebPage/WebPage.cpp:
        (WebKit::WebPage::canShowMIMEType):
        * WebProcess/WebPage/WebPage.h:
